create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1432,7 +1432,7 @@ body {
   color: #000000;
 }
 .cid-rtcLJCuc76 P {
-  text-align: center;
+  text-align: left;
 }
 .cid-rtcQCKA3no {
   padding-top: 60px;
