create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3343,26 +3343,8 @@ body {
 .cid-rsDuqY4li0 .dropdown-item:hover {
   color: #767676 !important;
 }
-.cid-rtDGGA04ob {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #ffffff;
-}
-.cid-rtDGGA04ob .title {
-  margin-bottom: 2rem;
-}
-.cid-rtDGGA04ob .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-rtDGGA04ob a:not([href]):not([tabindex]) {
-  color: #fff;
-  border-radius: 3px;
-}
-.cid-rtDGGA04ob a.btn-white:not([href]):not([tabindex]) {
-  color: #333;
-}
-.cid-rtDGGA04ob textarea.form-control {
-  min-height: 188px;
+.cid-rtQQkhwC2M {
+  background: linear-gradient(45deg, #ff00d1, #073b4c);
 }
 .cid-rtmtJnOR9h {
   padding-top: 90px;
