--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1414,7 +1414,7 @@ body {
   box-shadow: none !important;
 }
 .cid-rtfn8umAcK {
-  background-image: url("../../../assets/images/portrait-4246954-1920-1-1920x1081.jpg");
+  background-image: url("../../../assets/images/mbr-1920x1280.jpg");
 }
 .cid-rtfn8umAcK H1 {
   color: #ffffff;
@@ -2939,7 +2939,7 @@ body {
 .cid-rtDtMqb0pn {
   padding-top: 120px;
   padding-bottom: 120px;
-  background-image: url("../../../assets/images/background1.jpg");
+  background-image: url("../../../assets/images/background10.jpg");
 }
 .cid-rtDtMqb0pn .mbr-figure {
   margin: 0 auto;
@@ -3362,7 +3362,7 @@ body {
 .cid-rtmtJnOR9h {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background1.jpg");
+  background-image: url("../../../assets/images/background10.jpg");
 }
 .cid-rtmtJnOR9h .icons-media-container {
   display: flex;
@@ -3806,4 +3806,462 @@ body {
 }
 .cid-rtFuIG7KcJ textarea.form-control {
   min-height: 188px;
+}
+.cid-rsDuqY4li0 .navbar {
+  background: #ffffff;
+  transition: none;
+  min-height: 77px;
+  padding: .5rem 0;
+}
+.cid-rsDuqY4li0 .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
+}
+.cid-rsDuqY4li0 a {
+  font-style: normal;
+}
+.cid-rsDuqY4li0 .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rsDuqY4li0 .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rsDuqY4li0 .nav-item:focus,
+.cid-rsDuqY4li0 .nav-link:focus {
+  outline: none;
+}
+.cid-rsDuqY4li0 .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rsDuqY4li0 .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rsDuqY4li0 .menu-logo {
+  margin-right: auto;
+}
+.cid-rsDuqY4li0 .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rsDuqY4li0 .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rsDuqY4li0 .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rsDuqY4li0 .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rsDuqY4li0 .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-rsDuqY4li0 .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rsDuqY4li0 .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-rsDuqY4li0 .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rsDuqY4li0 .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rsDuqY4li0 .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rsDuqY4li0 .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rsDuqY4li0 .dropdown .dropdown-menu {
+  background: #ffffff;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rsDuqY4li0 .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rsDuqY4li0 .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rsDuqY4li0 .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rsDuqY4li0 .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rsDuqY4li0 .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rsDuqY4li0 .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rsDuqY4li0 .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rsDuqY4li0 .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rsDuqY4li0 .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rsDuqY4li0 .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rsDuqY4li0 .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rsDuqY4li0 button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rsDuqY4li0 button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rsDuqY4li0 button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ff00d2;
+}
+.cid-rsDuqY4li0 button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rsDuqY4li0 button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rsDuqY4li0 button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rsDuqY4li0 button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rsDuqY4li0 nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rsDuqY4li0 nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rsDuqY4li0 nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rsDuqY4li0 nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rsDuqY4li0 .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rsDuqY4li0 .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-rsDuqY4li0 .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rsDuqY4li0 .collapsed .navbar-collapse.collapsing,
+.cid-rsDuqY4li0 .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rsDuqY4li0 .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rsDuqY4li0 .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rsDuqY4li0 .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rsDuqY4li0 .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rsDuqY4li0 .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rsDuqY4li0 .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rsDuqY4li0 .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rsDuqY4li0 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+@media (min-width: 992px) {
+  .cid-rsDuqY4li0 .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 4.2rem);
+  }
+}
+.cid-rsDuqY4li0 .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rsDuqY4li0 .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rsDuqY4li0 .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rsDuqY4li0 .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  overflow: hidden;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rsDuqY4li0 .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rsDuqY4li0 .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rsDuqY4li0 .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-rsDuqY4li0.navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rsDuqY4li0 img {
+    height: 3.8rem !important;
+  }
+  .cid-rsDuqY4li0 .btn {
+    display: -webkit-flex;
+  }
+  .cid-rsDuqY4li0 button.navbar-toggler {
+    display: block;
+  }
+  .cid-rsDuqY4li0 .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rsDuqY4li0 .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rsDuqY4li0 .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rsDuqY4li0 .navbar-collapse.collapsing,
+  .cid-rsDuqY4li0 .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rsDuqY4li0 .navbar-collapse.collapsing .navbar-nav,
+  .cid-rsDuqY4li0 .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rsDuqY4li0 .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rsDuqY4li0 .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rsDuqY4li0 .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rsDuqY4li0 .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rsDuqY4li0 .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rsDuqY4li0 .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rsDuqY4li0 .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    overflow: hidden;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rsDuqY4li0 .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rsDuqY4li0 .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rsDuqY4li0 .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rsDuqY4li0 .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-rsDuqY4li0 .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-rsDuqY4li0 .nav-link:hover,
+.cid-rsDuqY4li0 .dropdown-item:hover {
+  color: #767676 !important;
+}
+.cid-rvphMkeIuG {
+  padding-top: 75px;
+  padding-bottom: 75px;
+  background-image: url("../../../assets/images/background4.jpg");
+}
+.cid-rvphMkeIuG .mbr-media span {
+  font-size: 48px;
+  cursor: pointer;
+  background-color: #ffffff;
+  border-radius: 50%;
+  width: 6rem;
+  height: 6rem;
+  line-height: 6rem;
+  position: relative;
+  display: inline-block;
+  transition: all 0.25s;
+  color: #353535;
+}
+.cid-rvphMkeIuG .mbr-media span.mbri-play:before {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-35%);
+  -moz-transform: translateX(-35%);
+  -ms-transform: translateX(-35%);
+  -o-transform: translateX(-35%);
+  transform: translateX(-35%);
+}
+.cid-rvphMkeIuG .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  left: 0;
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.65);
+  width: 100%;
+  height: 100%;
+}
+.cid-rvphMkeIuG .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
+}
+.cid-rvphMkeIuG .modalWindow .modalWindow-video {
+  height: calc(44.9943757vw);
+  width: 80vw;
+  margin: 0 auto;
+}
+.cid-rvphMkeIuG a.close {
+  position: absolute;
+  right: 4vw;
+  top: 4vh;
+  color: #ffffff;
+  z-index: 5000000;
+  font-size: 37px;
+  background: #000;
+  padding: 20px;
+  border-radius: 50%;
+}
+.cid-rvphMkeIuG a.close:hover {
+  color: #ffffff;
 }
